@@ -8,7 +8,7 @@ public class ListSortTest {
 
   public static void main(String[] args) {
 
-    List<Integer> list = List.of(3, 1, 5, 4, 2, 7);
+    List<Integer> list = Arrays.asList(3, 1, 5, 4, 2, 7);
     list.sort(null); // null이 무엇을 의미..?
     System.out.println(list);
 
